# nlw-operator-computer-vision

./: README.me
computer_vision_app/: .sesskey  README.md  app.py  pyproject.toml
computer_vision_app/assets/: script.js  style.css
computer_vision_app/core/: models.py  processor.py  utils.py
lenet/: README.md  lenet5.ipynb
lenet/weights/: lenet5_mnist.pth
recog_system/: .env  .env.example  READEME.md  README.md  collect_data.py  gesture_model.joblib  label_encoder.joblib  pyproject.toml  timm_classification.ipynb  train_model.py  webcam_detection.py
