[project]
name = "recog-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.33",
    "notebook>=7.5.5",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
]
